# 2023-11-18 v1.9 b195 ### √ conversion to new signal scheme for the agent's revised PinHandler2.class